--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -21,13 +21,13 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
-      - name: Install composer dependencies
-        uses: ramsey/composer-install@v1
+      # - name: Install composer dependencies
+      #   uses: ramsey/composer-install@v1
 
       # - name: Run Pint
       #   run: ./vendor/bin/pint
 
-      - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Updateg
+      # - name: Commit changes
+      #   uses: stefanzweifel/git-auto-commit-action@v4
+      #   with:
+      #     commit_message: Update
