--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -19,11 +19,8 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
-      # - name: Install composer dependencies
-      #   uses: ramsey/composer-install@v1
-
-      # - name: Run Pint
-      #   run: ./vendor/bin/pint
+      - name: Install composer dependencies
+        uses: ramsey/composer-install@v1
 
       # - name: Commit changes
       #   uses: stefanzweifel/git-auto-commit-action@v4
