--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -19,6 +19,9 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
+      - name: Add auth.json
+        run: echo '${{ secrets.COMPOSER_AUTH_JSON }}' > $GITHUB_WORKSPACE/auth.json
+
       - name: Install composer dependencies
         uses: ramsey/composer-install@v1
 
