--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: ramsey/composer-install@v1
 
       - name: Update composer dependencies
-        uses: kawax/composer-update-action@v3.0.0
+        run: composer update
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
