--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -22,6 +22,9 @@ jobs:
       - name: Add auth.json
         run: echo '${{ secrets.COMPOSER_AUTH_JSON }}' > $GITHUB_WORKSPACE/auth.json
 
+      - name: Copy .env
+        run: cp $GITHUB_WORKSPACE/.env.example $GITHUB_WORKSPACE/.env
+
       - name: Install composer dependencies
         uses: ramsey/composer-install@v1
 
