--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -28,6 +28,9 @@ jobs:
       - name: Install composer dependencies
         uses: ramsey/composer-install@v1
 
+      - name: Update Statamic version
+        run: composer require statamic/cms "^3.2"
+
       - name: Update composer dependencies
         run: composer update
 
