--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -26,7 +26,7 @@ jobs:
         run: cp $GITHUB_WORKSPACE/.env.example $GITHUB_WORKSPACE/.env
 
       - name: Install Sitestein CLI
-        run: composer global install sitestein/cli
+        run: composer global require sitestein/cli
 
       - name: Install composer dependencies
         uses: ramsey/composer-install@v1
