--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -20,7 +20,7 @@ jobs:
           ref: ${{ github.head_ref }}
 
       - name: Add auth.json
-        run: echo '${{ secrets.COMPOSER_AUTH_JSON }}' > $GITHUB_WORKSPACE/auth.json
+        run: echo '${{ secrets.COMPOSER_AUTH_JSON }}' > $HOME/.composer/auth.json
 
       - name: Copy .env
         run: cp $GITHUB_WORKSPACE/.env.example $GITHUB_WORKSPACE/.env
