--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -26,7 +26,7 @@ jobs:
         run: cp $GITHUB_WORKSPACE/.env.example $GITHUB_WORKSPACE/.env
 
       - name: Install Sitestein CLI
-        run: composer global config repositories.cli vcs https://github.com/sitestein/cli && composer global require sitestein/cli:dev-master
+        run: composer global config repositories.cli vcs https://github.com/sitestein/cli && composer global require sitestein/cli:^1.0
 
       - name: Update dependencies
         run: composer bump && composer update
