--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -28,8 +28,11 @@ jobs:
       - name: Install Sitestein CLI
         run: composer global config repositories.cli vcs https://github.com/sitestein/cli && composer global require sitestein/cli:^1.0
 
-      - name: Update dependencies
-        run: composer update && composer bump && composer update
+      - name: Install/update dependencies
+        run: composer install && composer update
+
+      - name: Bump dependencies
+        run: composer bump && composer update
 
       - name: Publish Sitestein
         run: sitestein publish
