--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -37,6 +37,9 @@ jobs:
       - name: Publish Sitestein
         run: sitestein publish
 
+      - name: Rebuild
+        run: php please rebuild:content
+
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
