--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -50,4 +50,4 @@ jobs:
         uses: fjogeleit/http-request-action@v1
         with:
           url: ${{ github.event.inputs.albert_action_url }}
-          method: 'POST'
+          method: 'GET'
